--- a/views/memes/index.ejs
+++ b/views/memes/index.ejs
@@ -37,9 +37,11 @@
             </li>
                 <% } %> 
 
-            <li class=" page-item <% if (parseInt(page) === pageCount){%>disabled<% } %>">
+            <li class=" page-item <% if (parseInt(page) === pageCount || pageCount === 0){%>disabled<% } %>">
                 <a class="page-link" href="/memes/<%if (typeof category === 'string') {%><%=category.toLowerCase()%>/<% } %><%=parseInt(page)+1%>" aria-label="Next">&raquo;</a>
             </li>
+            <% console.log(page) %>
+            <% console.log(pageCount) %>
         </ul>
     </nav>
 </div>
