correcting responsive design at low resolutions

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,7 +14,7 @@
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
 
-    <main class="mx-auto col-sm-12 col-md-7 col-lg-5 col-xxl-4 mb-2">
+    <main class="col-sm-12 mx-md-auto col-md-7 col-lg-5 col-xxl-4 mb-2">
         <%- body %>
         <%- include('../partials/flash') %>
     </main>
