--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer bg-dark bg-gradient py-3 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy; Memes 2022</span>
+        <span class="text-muted">&copy; WitMemes 2022</span>
     </div>
 
 </footer>
