--- a/views/partials/meme.ejs
+++ b/views/partials/meme.ejs
@@ -3,9 +3,12 @@
 <div class="card mb-3 bg-card bg-gradient shadow border-0 px-0 meme-loading" id="<%=meme._id%>">
     <div class="card-body d-flex align-items-center">
         <a href="/meme/<%=meme._id%>" class="text-decoration-none">
-            <h5 class="card-title py-1 px-0 mb-0 text-light text-break"><%= meme.title %></h5>
+            <h5 class="card-title ps-1 mb-0 text-light text-break"><%= meme.title %></h5>
         </a>
-        <span class="fs-6 fw-light text-muted ms-auto ps-4 align-self-start text-end">by <%=meme.author.username %> </span>
+        <div class="d-flex flex-column py-0 my-0 ms-auto ps-4 fs-6 fw-light text-muted text-end">
+            <span>by <%=meme.author.username%> </span>
+            <span>in <a class="link-light" style="opacity: 0.5;" href="/memes/<%=meme.category.toLowerCase()%>/1"><%=meme.category %></a></span>
+        </div>
     </div>
     <a href="/meme/<%=meme._id%>"><img src="<%=meme.image.displayImg %>" data-id="<%=meme._id%>" class="card-img-top rounded-0" alt="meme"></a>
     <div class="card-footer flex-wrap  d-flex align-items-center bg-card bg-gradient py-2 border-0">
