changing navbar responsive breakpoint

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark bg-gradient shadow" style="z-index: 101">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark bg-gradient shadow" style="z-index: 101">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">WitMemes</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
