minor desing tweaks

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,15 +1,19 @@
 <% layout('layouts/boilerplate') %>
-<h1 class="mb-4">Login</h1>
-<form action="/login" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" id="username" name="username" class="form-control" required>
-        <div class="valid-feedback">OK!</div>
+<div class="container">
+    <div class="col-8 offset-2">
+        <h1 class="mb-4">Login</h1>
+        <form action="/login" method="POST" class="validated-form" novalidate>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" name="username" class="form-control" required>
+                <div class="valid-feedback">OK!</div>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" id="password" name="password" class="form-control" required>
+                <div class="valid-feedback">OK!</div>
+            </div>
+            <button class="btn btn-success text-light">Login</button>
+        </form>
     </div>
-    <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" id="password" name="password" class="form-control" required>
-        <div class="valid-feedback">OK!</div>
-    </div>
-    <button class="btn btn-success text-light">Login</button>
-</form>
+</div>
