--- a/views/memes/edit.ejs
+++ b/views/memes/edit.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <h1 class="text-center">Edit meme</h1>
+<div class="container">
     <div class="col-6 offset-3">
+        <h1 class="mb-4">Edit meme</h1>
         <form action="/meme/<%=meme._id%>?_method=PUT" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
@@ -20,6 +20,6 @@
                 <button class="btn btn-success text-light">Submit changes</button>
             </div>
         </form>
-        <a href="/meme/<%=meme._id%>">Back to Your Meme</a>
+        <a href="/meme/<%=meme._id%>" class="mb-3">Back to Your Meme</a>
     </div>
 </div>
