--- a/views/memes/new.ejs
+++ b/views/memes/new.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-    <h1 class="text-center mt-3 mb-4">New Meme</h1>
-    <div class="col-6 offset-3 mt-3">
+<div class="container">
+    <div class="col-6 offset-3">
+        <h1 class="mb-4">New Meme</h1>
         <form action="/meme/" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="title" class="form-label">Title</label>
@@ -29,6 +29,6 @@
                 <button class="btn btn-success text-light">Add Meme</button>
             </div>
         </form>
-        <a href="/" class="link-secondary">Back to Home</a>
+        <a href="/" class="link-secondary mb-3">Back to Home</a>
     </div>
 </div>
