--- a/views/partials/meme.ejs
+++ b/views/partials/meme.ejs
@@ -11,9 +11,9 @@
         </div>
     </div>
     <a href="/meme/<%=meme._id%>"><img src="<%=meme.image.displayImg %>" data-id="<%=meme._id%>" class="card-img-top rounded-0" alt="meme"></a>
-    <div class="card-footer flex-wrap  d-flex align-items-center bg-card bg-gradient py-2 border-0">
+    <div class="card-footer d-flex flex-wrap justify-content-between align-items-center bg-card bg-gradient py-2 border-0">
 
-        <div class="card flex-row p-1 align-items-center me-2 my-1">
+        <div class="card flex-row p-1 align-items-center my-1 me-2">
             <form class="form-vote" data-id="<%=meme._id%>" data-vote="upvote">
                 <button type="submit" id="btn-upvote-<%=meme._id%>" value="<%if(currentUser){%><%=currentUser._id%><%}%>" class="py-1 btn <% if (currentUser && meme.upvotedBy.includes(currentUser._id)) { %>
                 btn-success
@@ -40,6 +40,6 @@
             <span class="px-1 fs-4"><%=meme.comments.length%> </span>
         </div>
 
-        <span class="fs-6 fw-light text-muted text-end ms-auto"><%=meme.date %> </span>
+        <span class="fs-6 fw-light text-muted ms-auto text-end"><%=meme.date %> </span>
     </div>
 </div>
