--- a/views/memes/show.ejs
+++ b/views/memes/show.ejs
@@ -13,7 +13,7 @@
             <button type="submit" class="btn btn-danger text-light">Delete meme</button>
         </form>
         <% } %>
-        <a href="<%=goBack%><% if (goBack = '/' || goBack.includes('/memes/')) { %>#<%=meme._id%><% } %>" class="btn btn-dark ms-auto">Go back</a>
+        <a href="<%=goBack%><% if (goBack = '/' || goBack.includes('/memes/')) { %>#<%=meme._id%><% } %>" class="btn btn-primary ms-auto">Go back</a>
 
 
 
