--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="container">
     <div class="col-8 offset-2">
-        <h1 class="mb-4">Register</h1>
+        <h1 class="mb-4 mt-5">Register</h1>
         <form action="/register" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
@@ -18,7 +18,7 @@
                 <input type="password" id="password" name="password" class="form-control" required>
                 <div class="valid-feedback">OK!</div>
             </div>
-            <button class="btn btn-success text-light">Register</button>
+            <button class="btn btn-primary text-light">Register</button>
         </form>
     </div>
 </div>
