--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark bg-gradient py-3 mt-auto">
+<footer class="footer bg-card bg-gradient py-3 mt-auto">
     <div class="container">
         <span class="text-muted">&copy; WitMemes 2022</span>
     </div>
