--- a/views/partials/meme.ejs
+++ b/views/partials/meme.ejs
@@ -1,19 +1,19 @@
 <div class="spinner-border meme-spinner m-auto d-block" id="spinner-<%=meme._id%>" role="status"></div>
 
-<div class="card mb-3 bg-card bg-gradient shadow border-0 px-0 meme-loading" id="<%=meme._id%>">
-    <div class="card-body d-flex align-items-center">
+<div class="card mb-3 bg-card shadow border-0 px-0 meme-loading" id="<%=meme._id%>">
+    <div class="card-body d-flex align-items-center  py-3">
         <a href="/meme/<%=meme._id%>" class="text-decoration-none">
             <h5 class="card-title ps-1 mb-0 text-light text-break"><%= meme.title %></h5>
         </a>
         <div class="d-flex flex-column py-0 my-0 ms-auto ps-4 fs-6 fw-light text-muted text-end">
             <span>by <%=meme.author.username%> </span>
-            <span>in <a class="link-light" style="opacity: 0.5;" href="/memes/<%=meme.category.toLowerCase()%>/1"><%=meme.category %></a></span>
+            <span>in <a class="link-light" style="opacity: 0.7;" href="/memes/<%=meme.category.toLowerCase()%>/1"><%=meme.category %></a></span>
         </div>
     </div>
     <a href="/meme/<%=meme._id%>"><img src="<%=meme.image.displayImg %>" data-id="<%=meme._id%>" class="card-img-top rounded-0" alt="meme"></a>
-    <div class="card-footer bg-dark d-flex flex-wrap justify-content-between align-items-center bg-card bg-gradient py-2 border-0">
+    <div class="card-footer bg-card d-flex flex-wrap justify-content-start align-items-center bg-card py-1 border-0">
 
-        <div class="card flex-row p-1 align-items-center my-1 me-2 meme-btn-bg">
+        <div class="card flex-row p-1 align-items-center my-1 me-2 meme-btn-bg bg-gradient">
             <form class="form-vote" data-id="<%=meme._id%>" data-vote="upvote">
                 <button type="submit" aria-label="upvote" id="btn-upvote-<%=meme._id%>" value="<%if(currentUser){%><%=currentUser._id%><%}%>" class="py-1 btn <% if (currentUser && meme.upvotedBy.includes(currentUser._id)) { %>
                 btn-success
@@ -21,10 +21,10 @@
                 btn-secondary
                 <% } %> " <%if(!currentUser){%>disabled<%} %>><i class="bi bi-arrow-up text-light"></i></button>
             </form>
-            <span class="px-1 fs-4" id="upvoteCounter-<%=meme._id%>"><%=meme.upvotedBy.length%> </span>
+            <span class="px-1 fs-4 text-light" id="upvoteCounter-<%=meme._id%>"><%=meme.upvotedBy.length%> </span>
         </div>
 
-        <div class="card flex-row p-1 align-items-center me-2 my-1 meme-btn-bg">
+        <div class="card flex-row p-1 align-items-center me-2 my-1 meme-btn-bg bg-gradient">
             <form class="form-vote" data-id="<%=meme._id%>" data-vote="downvote">
                 <button type="submit" aria-label="downvote" id="btn-downvote-<%=meme._id%>" value="<%if(currentUser){%><%=currentUser._id%><%}%>" class="py-1 btn <% if (currentUser && meme.downvotedBy.includes(currentUser._id)) { %>
                 btn-danger
@@ -32,14 +32,14 @@
                 btn-secondary
                 <% } %> " <%if(!currentUser){%>disabled<%} %>><i class="bi bi-arrow-down text-light"></i></button>
             </form>
-            <span class="px-1 fs-4" id="downvoteCounter-<%=meme._id%>"><%=meme.downvotedBy.length%> </span>
+            <span class="px-1 fs-4 text-light" id="downvoteCounter-<%=meme._id%>"><%=meme.downvotedBy.length%> </span>
         </div>
 
-        <div class="card flex-row p-1 align-items-center my-1 meme-btn-bg">
+        <div class="card flex-row p-1 align-items-center my-1 meme-btn-bg bg-gradient">
             <a class="btn btn-secondary py-1" aria-label="comments" href="/meme/<%=meme._id%>/#comments"><i class="bi bi-chat-fill"></i></a>
-            <span class="px-1 fs-4"><%=meme.comments.length%> </span>
+            <span class="px-1 fs-4 text-light"><%=meme.comments.length%> </span>
         </div>
 
-        <span class="fs-6 fw-light text-muted ms-auto text-end"><%=meme.date %> </span>
+        <span class="fs-6 fw-light text-muted ms-auto text-end text-wrap"><%=meme.date %> </span>
     </div>
 </div>
