--- a/views/partials/meme.ejs
+++ b/views/partials/meme.ejs
@@ -10,7 +10,7 @@
             <span>in <a class="link-light" style="opacity: 0.7;" href="/memes/<%=meme.category.toLowerCase()%>/1"><%=meme.category %></a></span>
         </div>
     </div>
-    <a href="/meme/<%=meme._id%>"><img src="<%=meme.image.displayImg %>" data-id="<%=meme._id%>" class="card-img-top rounded-0" alt="meme"></a>
+    <a href="/meme/<%=meme._id%>"><img src="<%=meme.image.displayImg %>" data-id="<%=meme._id%>" class="card-img-top rounded-0 meme-img" alt="meme"></a>
     <div class="card-footer bg-card d-flex flex-wrap justify-content-start align-items-center bg-card py-1 border-0">
 
         <div class="card flex-row p-1 align-items-center my-1 me-2 meme-btn-bg bg-gradient">
